# drf-template

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.local.yaml  manage.py  pyproject.toml  railway_rest_api.toml
api/: constants.py  middleware.py  pagination.py  urls.py  wsgi.py
api/settings/: common.py  dev.py  local.py  prod.py  testing.py
app/: middleware.py  urls.py  views.py
app/settings/: common.py  dev.py  local.py  prod.py  testing.py
app/templates/rest_framework/: base.html
tests/: conftest.py  factories.py  monkey.py
tests/general/: test_general_endpoints.py
tests/users/: test_users_endpoints.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
utils/rest_framework/: formatters.py
